--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,8 +16,14 @@ code {
 }
 
 .btn-primary,
-.btn-primary:hover,
+.btn-primary:hover{
+  background-color: #2280bf;
+}
 .btn-primary:focus {
-  background-color: #34859b;
+  background-color: #18335d ;
   border-color: #34859b;
+}
+
+.table-hover tbody tr.hovered-row {
+  background-color: rgba(174, 203, 223, .001) !important; /* Custom hover color */
 }
