fixed formatting with prettier

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,14 +16,19 @@ code {
 }
 
 .btn-primary,
-.btn-primary:hover{
+.btn-primary:hover {
   background-color: #2280bf;
 }
 .btn-primary:focus {
-  background-color: #18335d ;
+  background-color: #18335d;
   border-color: #34859b;
 }
 
 .table-hover tbody tr.hovered-row {
-  background-color: rgba(174, 203, 223, .001) !important; /* Custom hover color */
+  background-color: rgba(
+    174,
+    203,
+    223,
+    0.001
+  ) !important; /* Custom hover color */
 }
